globus-xio-popen-driver (3.2-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:28 -0400

globus-xio-popen-driver (3.1-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:55 -0400

globus-xio-popen-driver (3.1-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:40 -0500

globus-xio-popen-driver (3.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging Fixes

 -- Globus Toolkit <support@globus.org>  Thu, 13 Feb 2014 19:16:02 -0500

globus-xio-popen-driver (3.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 09:10:14 -0500

globus-xio-popen-driver (2.3-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-xio-popen-driver (2.3-1) unstable; urgency=low

  * RIC-226: Some dependencies are missing in GPT metadata

 -- Globus Toolkit <support@globus.org>  Tue, 14 Feb 2012 14:44:23 -0500

globus-xio-popen-driver (2.2-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-xio-popen-driver (2.2-1) unstable; urgency=low

  * Remove obsolete get-orig-source rules

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500

globus-xio-popen-driver (2.2-0) unstable; urgency=low

  * Update to 5.1.3

 -- Globus Toolkit <support@globus.org>  Tue, 15 Nov 2011 16:26:12 -0500

globus-xio-popen-driver (1.1-0GT5.1.1a) unstable; urgency=low

  * Non-Maintainer Upload -- Update to Globus Toolkit 5.1.1

 -- Globus Toolkit <support@globus.org>  Thu, 26 May 2011 14:51:07 -0400

globus-xio-popen-driver (0.9-3) unstable; urgency=low

  * Add README file