@@ -114,8 +114,7 @@ install: build-stamp
 	find $(INSTALLDIR)$(_libdir) -name 'lib*.la' -exec rm -v '{}' \;
 	# Generate package filelists
 	ls -1 \
-	  debian/tmp$(_libdir)/*.so \
-	  debian/tmp$(_libdir)/libglobus*.so.* \
+	  debian/tmp$(_libdir)/libglobus*.so* \
 	  debian/tmp$(_docdir)/lib$(name)-dev/GLOBUS_LICENSE \
 	  > debian/lib$(name)$(soname).install
 	ls -1 debian/tmp$(_includedir)/globus/*.h \
