@@ -1,3 +1,9 @@
+globus-xio-rate-driver (1.4-2+gt6.@distro@) @distro@; urgency=low
+
+  * Fix filelist for unversioned .so
+
+ -- Globus Toolkit <support@globus.org>  Thu, 24 April 2014 10:10:29 -0400
+
 globus-xio-rate-driver (1.4-1+gt6.@distro@) @distro@; urgency=low
 
   * Version bump for consistency
