@@ -1,3 +1,9 @@
+globus-xio-popen-driver (3.2-2+gt6.@distro@) @distro@; urgency=low
+
+  * Fix filelist for unversioned .so
+
+ -- Globus Toolkit <support@globus.org>  Thu, 24 April 2014 10:10:21 -0400
+
 globus-xio-popen-driver (3.2-1+gt6.@distro@) @distro@; urgency=low
 
   * Version bump for consistency
